--- a/myLovePDF.ipynb
+++ b/myLovePDF.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz  # pymupdf\n",
     "import os\n",
     "from PIL import Image\n",
-    "import sys\n",
-    "from PyQt5.QtWidgets import QApplication, QWidget, QVBoxLayout, QLabel, QPushButton, QFileDialog\n"
+    "import sys"
    ]
   },
   {
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +215,6 @@
     "\t\tdoc_salida.save(salida)\n",
     "\t\tprint(f\"Guardado: {salida}\")\n",
     "\tif len(doc_salida_extra) > 0:\n",
-    "\t\tdoc_salida_extra.save(salida_extra)\n",
     "\t\tprint(f\"Guardado: {salida_extra}\")\n",
     "\n",
     "\tdoc_inicial.close()\n",
