--- a/myLovePDF.ipynb
+++ b/myLovePDF.ipynb
@@ -2,14 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz  # pymupdf\n",
     "import os\n",
     "from PIL import Image\n",
-    "import sys"
+    "import sys\n",
+    "from mutagen.id3 import ID3, USLT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Letra agregada/actualizada en D:/maste/Escritorio/hola.mp3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def agregar_letra(archivo, letra, lang=\"XXX\", desc=\"\"):\n",
+    "    \"\"\"\n",
+    "    Agrega o reemplaza la letra de la canción en el archivo MP3.\n",
+    "\n",
+    "    Parámetros:\n",
+    "      archivo (str): Ruta del archivo MP3.\n",
+    "      letra (str): Texto completo de la letra.\n",
+    "      lang (str): Código de idioma. Se recomienda \"XXX\" para compatibilidad.\n",
+    "      desc (str): Descripción del frame, generalmente se deja vacío.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        audio = ID3(archivo)\n",
+    "    except Exception:\n",
+    "        audio = ID3()\n",
+    "\n",
+    "    # Eliminar cualquier frame USLT existente para no duplicar\n",
+    "    audio.delall(\"USLT\")\n",
+    "    \n",
+    "    # Agregar la letra usando UTF-8 (encoding=3)\n",
+    "    audio.add(USLT(encoding=3, lang=lang, desc=desc, text=letra))\n",
+    "    audio.save(archivo)\n",
+    "    print(f\"Letra agregada/actualizada en {archivo}\")\n",
+    "\n",
+    "letra =\"\"\"prueba probando holaaaaaaaaaa\n",
+    "como te va loquitra\"\"\"\n",
+    "archivo = \"D:/maste/Escritorio/hola.mp3\"\n",
+    "agregar_letra(archivo,letra)\n"
    ]
   },
   {
@@ -23,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Advertencia: No se encontró 'archivo1.pdf' y será omitido.\n",
-      "Advertencia: No se encontró 'archivo2.pdf' y será omitido.\n",
-      "Advertencia: No se encontró 'archivo3.pdf' y será omitido.\n",
-      "Error: No se pudo generar el PDF de salida.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo de uso\n",
     "archivos = [\"archivo1.pdf\", \"archivo2.pdf\", \"archivo3.pdf\"]\n",
@@ -121,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,15 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: No se encontró 'documento.pdf'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo de uso\n",
     "archivos = \"documento.pdf\"\n",
@@ -224,18 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guardado: e:\\Agustin\\Escritorio\\myLovePDF\\pagina1.pdf\n",
-      "Guardado: e:\\Agustin\\Escritorio\\myLovePDF\\pagina2.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo de uso\n",
     "archivos = [\"colores.pdf\", \"pagina2.pdf\"]\n",
@@ -341,17 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PDF guardado como 'e:\\Agustin\\Escritorio\\myLovePDF\\resultado.pdf'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo de uso\n",
     "archivos = [\"rojo.jpg\", \"azul.png\"]\n",
@@ -373,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python_3_12_7venv",
    "language": "python",
    "name": "python3"
   },
@@ -447,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
